# ComputerVisionAndApplications

./: .gitignore  .gitmodules  ComputerVisionAndApplications.code-workspace
FinalProject/: CMakeLists.txt  FinalProject.code-workspace  final_report.md
FinalProject/src/acquirecolor/: CMakeLists.txt  acquirecolor.cpp  acquirecolor.hpp
FinalProject/src/assetconfig/: CMakeLists.txt  assetconfig.cpp  assetconfig.hpp
FinalProject/src/cvmatdebug/: CMakeLists.txt  cvmatdebug.hpp
FinalProject/src/directtriangulation/: CMakeLists.txt  directtriangulation.cpp  directtriangulation.hpp
FinalProject/src/featurematching/: CMakeLists.txt  featurematching.cpp  featurematching.hpp
FinalProject/src/main/: CMakeLIsts.txt  CMakeLists.txt  main.cpp
FinalProject/src/scanimageio/: CMakeLists.txt  scanimageio.cpp  scanimageio.hpp
FinalProject/src/xyzio/: CMakeLists.txt  xyzio.cpp  xyzio.hpp
Homework1/: CMakeLists.txt  README.md  cvaa_hw1.code-workspace
Homework1/dep/camera/src/: Camera.cpp
Homework1/dep/traceparser/include/: XyzParser.hpp
Homework1/dep/traceparser/src/: XyzParser.cpp
Homework1/src/: main.cpp
Homework2/: README.md  cvaa_hw2.code-workspace
Homework2/asset/: cat_paint_corners.xyz  lady_paint_corners.xyz
Homework2/src/: coordinateparser.cpp  main.cpp
Homework3/: CMakeLists.txt  Homework3.code-workspace
Homework3/assets/: SantaFeaturePoints2D.xyz  SantaFeaturePoints3D.xyz
Homework3/src/PointProjection/: pointprojection.cpp  pointprojection.hpp
Homework3/src/assetcheck/: CMakeLists.txt  assetcheck.cpp  assetcheck.hpp
Homework3/src/getprojection/: CMakeLists.txt  getprojection.cpp  getprojection.hpp
Homework3/src/mainprogram/: CMakeLists.txt  main.cpp
Homework3/src/pointprojection/: CMakeLists.txt  pointprojection.cpp  pointprojection.hpp
Homework3/src/xyzio/: CMakeLists.txt  xyzio.cpp  xyzio.hpp
Homework4/: CMakeLists.txt  Homework4.code-workspace
Homework4/assets/: CameraCalibrationExample.blend  leftPanelCorners2D.xyz  leftPanelCorners3D.xyz  leftPanelCorners_Image.xyz  rightPanelCorners2D.xyz  rightPanelCorners3D.xyz  rightPanelCorners_Image.xyz  rightPanelCorners_PanelLocal.xyz  topPanelCorners2D.xyz  topPanelCorners3D.xyz  topPanelCorners_Image.xyz
Homework4/output/: kMatrix.txt  leftRtMat.txt  rightRtMat.txt  topRtMat.txt
Homework4/src/assetcheck/: CMakeLists.txt  assetcheck.cpp  assetcheck.hpp
Homework4/src/cameracalibration/: CMakeLists.txt  cameracalibration.cpp  cameracalibration.hpp
Homework4/src/cvmatio/: CMakeLists.txt  cvmatio.cpp  cvmatio.hpp
Homework4/src/debugcode/: CMakeLists.txt  debugcode.cpp  debugcode.hpp
Homework4/src/main/: CMakeLists.txt  main.cpp
Homework4/src/xyzio/: CMakeLists.txt  xyzio.cpp  xyzio.hpp
MidtermProject/: .gitignore  CMakeLists.txt  MidtermProject.code-workspace  README.md  build_instructions.md  midterm_report.md
MidtermProject/assets/: FrameCornerCoordinates2d.xyz  FrameCornerCoordinates3d.xyz  SculptureRoi.xyz
MidtermProject/reportassets/: ImageProcessingProcedure.drawio
MidtermProject/src/: display_masks.cpp  main.cpp  predefines.hpp
MidtermProject/src/masking/: CMakeLists.txt  masking.cpp  masking.hpp
MidtermProject/src/redpixelfinder/: redpixelfinder.cpp
MidtermProject/src/scanimgio/: CMakeLists.txt  scanimgio.cpp  scanimgio.hpp
MidtermProject/src/sculptureslice/: CMakeLists.txt  sculptureslice.cpp  sculptureslice.hpp
MidtermProject/src/slicetrans/: CMakeLists.txt  slicetransform.cpp  slicetransform.hpp
MidtermProject/src/virtualcamera/: virtualcamera.cpp
MidtermProject/src/xyzio/: CMakeLists.txt  xyzio.cpp  xyzio.hpp
